Projet GL/test/src/test/deca/context/valid/increment7/float-cast-int.deca
// Test (int) float

// Historique : cree le 22/01/2023

{
    float f = 1.0;

    int x = (int) f;
}