Projet GL/test/src/test/deca/context/invalid/increment1/identifier-not-declared.deca
// Test identifier not declared

//test rule (0.1)

// Raison : Opération partielle

// Résultats : Ligne 14 "identifier not declared"

// Historique :
//  cree le 05/01/2023

{
    int x;

    //Must be declared
    y = x;
}